# lastfm-backup-cli

./: .gitignore  .mypy.ini  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
lastfm_backup/: main.py
lastfm_backup_cli/: main.py
test/: test_acceptance.py  test_unit.py
