[tool.poetry]
name = "lastfm-backup-cli"
version = "0.1.1"
description = "Super-simple CLI tool for backing up Last.fm scrobbling data"
authors = ["emkor93 <emkor93@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/emkor/lastfm-backup-cli"
repository = "https://github.com/emkor/lastfm-backup-cli"
keywords = ["lastfm", "last.fm", "scrobble", "backup"]

[tool.poetry.dependencies]
python = "^3.7"
pylast = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lastfm-backup = 'lastfm_backup_cli.main:cli_main'
